# turbin3-builders-q4-25

./: .gitmodules
anchor-amm-starter-q4-25/: Anchor.toml  package.json  txtx.yml
anchor-amm-starter-q4-25/runbooks/: README.md
anchor-amm-starter-q4-25/tests/: anchor-amm-starter-q4-25.ts
anchor-dice-game-starter-q4-25/: txtx.yml
anchor-escrow-starter-q4-25/: .gitignore  Anchor.toml  Cargo.toml
anchor-escrow-starter-q4-25/programs/anchor-escrow-q4-25/: Cargo.toml
anchor-escrow-starter-q4-25/programs/anchor-escrow-q4-25/src/: lib.rs
anchor-escrow-starter-q4-25/programs/anchor-escrow-q4-25/src/instructions/: make.rs  refund.rs  take.rs
anchor-escrow-starter-q4-25/runbooks/deployment/: main.tx
anchor-escrow-starter-q4-25/tests/: anchor-escrow-q4-25.ts  litesvm-tests.rs
anchor-mb-counter/: Anchor.toml
anchor-mplxcore-starter-q4-25/: Anchor.toml
anchor-nft-staking-starter-q4-25/: Anchor.toml
anchor-vault-q4-25/: Anchor.toml
private-payments-demo/: .gitignore  Anchor.toml  Cargo.toml  README.md  gen-new-devnet-keys.sh  package.json  run-mb-er-val.sh  run-mb-val.sh  tsconfig.json
private-payments-demo/frontend/: .env  .prettierignore  .prettierrc  components.json  next.config.js  package.json  tsconfig.json
private-payments-demo/frontend/app/: layout.tsx  page.tsx
private-payments-demo/frontend/app/advanced/: page.tsx
private-payments-demo/frontend/components/: Advanced.tsx  Alert.tsx  DarkModeToggle.tsx  Deposit.tsx  DepositActions.tsx  DepositDialog.tsx  ManageDeposit.tsx  MissingAddressCard.tsx  Navbar.tsx  Simple.tsx  SimpleDeposit.tsx  SimpleRecipient.tsx  SimpleTransfer.tsx  Tokens.tsx  Transfer.tsx  VerificationToast.tsx  Wallet.tsx
private-payments-demo/frontend/components/ui/: button.tsx  typography.tsx
private-payments-demo/frontend/hooks/: use-deposit.ts  use-ephemeral-connection.ts  use-private-rollup-auth.ts  use-program.ts  use-provider.ts  use-simple-transfer.ts  use-subscription.ts  use-tdx-quote-verification.ts  use-tokens.ts
private-payments-demo/frontend/lib/: constants.ts  types.ts  utils.ts
private-payments-demo/frontend/program/: private_payments.json  private_payments.ts
private-payments-demo/frontend/styles/: index.css
private-payments-demo/frontend/views/: advanced.tsx  simple.tsx
private-payments-demo/programs/private-payments/: Cargo.toml
private-payments-demo/programs/private-payments/src/: lib.rs
private-payments-demo/scripts/: fetch-local-fumps.sh  run-mb-test-val.ts
private-payments-demo/scripts/local-dumps/: 5hBR571xnXppuCPveTrctfTU7tJLSN94nq7kv7FRK5Tc.json  7JrkjmZPprHwtuvtuGTXp9hwfGYFAQLnLeFM52kqAgXg.json  Cuj97ggrhhidhbu39TijNVqE74xvKJ69gDervRUXAxGh.json  EpJnX7ueXk7fKojBymqmVuCuwyhDQsYcLVL1XMsBbvDX.json  F72HqCR8nwYsVyeVd38pgKkjXmXFzVAM8rjZZsXWbdE.json  mAGicPQYBMvcYveUZA5F5UNNwyHvfYh5xkLS2Fr1mev.json
private-payments-demo/tests/: config.example.ts  private-payments-tee-devnet.ts  private-payments.ts  session-private-transfers.ts
ts/: tsconfig.json
ts/cluster1/: spl_metadata.ts  (+2 more)
(+40 files in other folders)
