[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package]
name = "anchor-escrow-q4-25-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
# Integration test dependencies
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-escrow-q4-25 = { path = "./programs/anchor-escrow-q4-25" }
litesvm = "0.6.1"
litesvm-token = "0.6.1"
solana-sdk = "2.2.1"
spl-associated-token-account = "7.0.0"
