[workspace]
members = ["programs/*", "clients/rust"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
ephemeral-rollups-sdk = "0.2.11"
magicblock-permission-client = { path = "clients/rust" }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = "^1.0"
serde_with = "^3.0"
solana-program = "2.2"
thiserror = "^1.0"
session-keys = { path = "../session-keys/programs/gpl_session" }
